# CppGameProject

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql-analysis.yml
GameEngine/: CMakeLists.txt  CMakeSources.cmake
GameEngine/Engine/: Engine.cpp  Engine.hpp
GameEngine/Engine/Core/: Window.cpp  Window.hpp
GameEngine/Engine/Editor/: ContentBrowser.cpp  ContentBrowser.hpp  EditorView.cpp  EditorView.hpp
GameEngine/Engine/Entities/: BaseComponents.hpp  Entity.cpp  Entity.hpp
GameEngine/Engine/Entities/data/: DataStructs.hpp  LuaScript.hpp  LuaScriptHandler.cpp  LuaScriptHandler.hpp  NativeScript.cpp  NativeScript.hpp
GameEngine/Engine/Renderer/: Renderable.cpp  Renderable.hpp  Renderer.cpp  Renderer.hpp
GameEngine/Engine/Renderer/ImGUI/: ImGUIStyling.hpp
GameEngine/Engine/Renderer/Shaders/: ShaderProgram.cpp  ShaderProgram.hpp
GameEngine/Engine/ResourceManagement/: TextureResourceManager.cpp  TextureResourceManager.hpp
GameEngine/Engine/Scene/: ProjectData.cpp  ProjectData.hpp  Scene.cpp  Scene.hpp
GameEngine/Engine/Utils/: StringHelpers.hpp
GameEngine/Engine/Utils/IO/: Input.cpp  Input.hpp
GameEngine/Engine/Utils/Profiling/: ProcessTimeProfile.cpp  ProcessTimeProfile.hpp  ProfileInstance.cpp  ProfileInstance.hpp
GameEngine/Engine/Utils/Serialisation/: ProjectSerialisation.cpp  ProjectSerialisation.hpp  TextureLoader.cpp  TextureLoader.hpp
GameProject/: CMakeLists.txt  CMakeSources.cmake  GameProject.cpp  GameProjectConfig.h.in
Resources/: textureLoader.json
Resources/Resources/Shaders/: Vertex.vs
Resources/Shaders/: Fragment.fs  Vertex.vs
RunTime/: CMakeLists.txt  ExampleScene.cpp  ExampleScene.hpp  GameProject.cpp  GameProject.h
